# Embedded_IA

./: .gitignore  CMakeLists.txt  classifier.py  docker-compose.yaml  main.cpp  mfcc.cpp  svm_rpi
Data/: dataset.csv  dataset1.csv
include/: csvfile.h  signal.h
src/: main.cpp
